// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenize comment knows comments 1`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 11,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "comment",
    "value": "",
  },
]
`;

exports[`tokenize comment knows comments 2`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 2,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "comment",
    "value": "",
  },
]
`;

exports[`tokenize comment knows comments 3`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 13,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "comment",
    "value": "",
  },
]
`;

exports[`tokenize comment knows comments 4`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 12,
        "line": 0,
      },
      "start": Object {
        "column": 1,
        "line": 0,
      },
    },
    "type": "comment",
    "value": "",
  },
]
`;

exports[`tokenize comment knows comments 5`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 16,
        "line": 0,
      },
      "start": Object {
        "column": 5,
        "line": 0,
      },
    },
    "type": "comment",
    "value": "",
  },
]
`;

exports[`tokenize comment knows comments 6`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 13,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "comment",
    "value": "",
  },
]
`;

exports[`tokenize comment knows comments 7`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 16,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "comment",
    "value": "",
  },
]
`;

exports[`tokenize comment knows these are not comments 1`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 14,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "text.plain",
  },
]
`;

exports[`tokenize comment knows these are not comments 2`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 16,
        "line": 0,
      },
      "start": Object {
        "column": 2,
        "line": 0,
      },
    },
    "type": "text.plain",
  },
]
`;
